# openxr-vulkan-example-macos

./: .gitignore  CMakeLists.txt  build.sh  generate_pts.py
src/: Buffer.cpp  Context.cpp  Context.h  Headset.cpp  Headset.h  MirrorView.cpp  RenderProcess.cpp  RenderProcess.h  Renderer.cpp  Renderer.h  Util.cpp
src/shaders/: Basic.vert  HandL.vert  HandR.vert  Pt0.vert  Pt1.vert  Pt10.vert  Pt11.vert  Pt12.vert  Pt13.vert  Pt14.vert  Pt15.vert  Pt16.vert  Pt17.vert  Pt18.vert  Pt19.vert  Pt2.vert  Pt20.vert  Pt21.vert  Pt22.vert  Pt23.vert  Pt24.vert  Pt25.vert  Pt26.vert  Pt27.vert  Pt28.vert  Pt29.vert  Pt3.vert  Pt30.vert  Pt31.vert  Pt32.vert  Pt33.vert  Pt34.vert  Pt35.vert  Pt36.vert  Pt37.vert  Pt38.vert  Pt39.vert  Pt4.vert  Pt40.vert  Pt41.vert  (+28 more)
